@@ -2,6 +2,9 @@ $Id$
 
 *** Note: Please add new entries to the top of this file. ***
 -------------------------------------------------------------------------------
+- fixup go.sh to find svn (again) and stage 2 to use tmp for php and minihttpd
+  and stage 5 mfsroot for iso filename change
+
 - move system version number to file <repo>/version
 
 - fix DHCPv6 server wouldn't start
